@startuml
skinparam linetype ortho
skinparam monochrome true
skinparam classAttributeIconSize 0
'scale max 500*1000
'left to right direction
class BackgroundScript {
    + BackgroundScript()
    + run() : void
    + callback(event : Shared.BrowserEvent) : void
}

class ListenerManager {
    + ListenerManager(callback : (Shared.BrowserEvent) => void, configurationString? : string)
    + startAll()
    + stopAll()
}

interface ICommunicationStrategy {
    + establishConnection() : Promise<void>
    + requestConfig() : Promise<string>
    + waitForStart() : Promise<void>
    + sendData(data : string) : Promise<string>
    + addOnStopListener(callback: (error? : boolean) => void) : void
}

BackgroundScript *-- ListenerManager
BackgroundScript *-- ICommunicationStrategy
@enduml
